fix: changes some values to mobile layout

--- a/styles/css/department/vtex.flex-layout.css
+++ b/styles/css/department/vtex.flex-layout.css
@@ -65,4 +65,11 @@
 flex-direction: column;
 }
 
+.flexRowContent--Product__info-row{
+    flex-direction: column;
+}
+
+.flexRow--product__tabs-row{
+    display: none;
+}
 }
