--- a/styles/css/header/vtex.store-header.css
+++ b/styles/css/header/vtex.store-header.css
@@ -25,3 +25,13 @@
     flex-direction: column;
     align-items: center;
 }
+
+/*<-----------------mobile styles--------------->*/
+
+@media screen and (max-width: 489px) {
+
+
+
+
+
+}
