--- a/styles/css/header/vtex.store-components.css
+++ b/styles/css/header/vtex.store-components.css
@@ -10,8 +10,8 @@
 
 @media screen and (max-width: 489px) {
 
-.container{
-    /*padding: 0px;*/
+.logoContainer--header__top-logo{
+    padding-left: 0px;
 }
 
 }
