feat:add styles to header and footer

--- a/styles/css/header/vtex.store-header.css
+++ b/styles/css/header/vtex.store-header.css
@@ -26,6 +26,11 @@
     align-items: center;
 }
 
+.headerRowContainer--header__mobile-two {
+    padding-left: 10px;
+    color: #fff;
+}
+
 /*<-----------------mobile styles--------------->*/
 
 @media screen and (max-width: 489px) {
