--- a/styles/css/department/vtex.product-summary.css
+++ b/styles/css/department/vtex.product-summary.css
@@ -14,7 +14,10 @@
     max-height: 400px;
 }
 
-.imageStackContainer{
-    max-width:  170px;
-    max-height: 170px;
+.imageContainer  {
+    width:  170px;
+    height: 170px;
+    display: flex;
+    
 }
+
